--- a/booking.html
+++ b/booking.html
@@ -58,18 +58,24 @@
             التنبيهات
           </a>
 
-          <a href="analytics.html">
+          <a href="analytics.html" class="active">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
           </a>
-          <a href="booking.html" class="active">
+
+          <a href="booking.html">
             <i class="fa-solid fa-table"></i>
             جدول الحجوزات
           </a>
 
-          <a href="#">
-            <i class="fa-solid fa-user"></i>
-            ارسال رسالة جماعية
+          <a href="offers.html">
+            <i class="fa-solid fa-gift"></i>
+            إرسال العروض المخصصة
+          </a>
+
+          <a href="AIsettings.html">
+            <i class="fa-solid fa-robot"></i>
+            إعدادات الذكاء الاصطناعي
           </a>
         </nav>
       </aside>
