--- a/booking.html
+++ b/booking.html
@@ -48,7 +48,7 @@
           <span>CONAN DASHBOARD</span>
         </div>
         <nav class="menu">
-          <a href="dashboard.html">
+          <a href="dashboard.html" class="active">
             <i class="fa-solid fa-gauge"></i>
             لوحة القيادة
           </a>
@@ -58,7 +58,7 @@
             التنبيهات
           </a>
 
-          <a href="analytics.html" class="active">
+          <a href="analytics.html">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
           </a>
