--- a/booking.html
+++ b/booking.html
@@ -48,7 +48,7 @@
           <span>CONAN DASHBOARD</span>
         </div>
         <nav class="menu">
-          <a href="dashboard.html" class="active">
+          <a href="dashboard.html">
             <i class="fa-solid fa-gauge"></i>
             لوحة القيادة
           </a>
@@ -62,20 +62,14 @@
             <i class="fa-solid fa-rocket"></i>
             تحليلات
           </a>
-
-          <a href="booking.html">
+          <a href="booking.html" class="active">
             <i class="fa-solid fa-table"></i>
             جدول الحجوزات
           </a>
 
-          <a href="offers.html">
-            <i class="fa-solid fa-gift"></i>
-            إرسال العروض المخصصة
-          </a>
-
-          <a href="AIsettings.html">
-            <i class="fa-solid fa-robot"></i>
-            إعدادات الذكاء الاصطناعي
+          <a href="#">
+            <i class="fa-solid fa-user"></i>
+            ارسال رسالة جماعية
           </a>
         </nav>
       </aside>
