--- a/dashboard.html
+++ b/dashboard.html
@@ -74,29 +74,31 @@
           <span>CONAN DASHBOARD</span>
         </div>
         <nav class="menu">
-          <a href="dashboard.html">
+          <a href="dashboard.html" class="active">
             <i class="fa-solid fa-gauge"></i>
             لوحة القيادة
           </a>
 
-          <a href="notifications.html">
+          <a href="notifications.html" id="notificationLink">
             <i class="fa-solid fa-bell"></i>
             التنبيهات
+            <span class="notification-badge hidden" id="notificationBadge"
+              >0</span
+            >
           </a>
 
-          <a href="analytics.html" class="active">
+          <a href="analytics.html">
             <i class="fa-solid fa-rocket"></i>
             تحليلات
           </a>
-
           <a href="booking.html">
             <i class="fa-solid fa-table"></i>
             جدول الحجوزات
           </a>
 
-          <a href="offers.html">
-            <i class="fa-solid fa-gift"></i>
-            إرسال العروض المخصصة
+          <a href="#">
+            <i class="fa-solid fa-user"></i>
+            ارسال رسالة جماعية
           </a>
 
           <a href="AIsettings.html">
