--- a/dashboard.html
+++ b/dashboard.html
@@ -105,6 +105,11 @@
             <i class="fa-solid fa-robot"></i>
             إعدادات الذكاء الاصطناعي
           </a>
+
+          <a href="offers.html">
+            <i class="fa-solid fa-gift"></i>
+            إرسال العروض المخصصة
+          </a>
         </nav>
       </aside>
 
