--- a/booking.html
+++ b/booking.html
@@ -67,9 +67,14 @@
             جدول الحجوزات
           </a>
 
-          <a href="#">
-            <i class="fa-solid fa-user"></i>
-            ارسال رسالة جماعية
+          <a href="AIsettings.html">
+            <i class="fa-solid fa-robot"></i>
+            إعدادات الذكاء الاصطناعي
+          </a>
+
+          <a href="offers.html">
+            <i class="fa-solid fa-gift"></i>
+            إرسال العروض المخصصة
           </a>
         </nav>
       </aside>
