--- a/offers.html
+++ b/offers.html
@@ -79,6 +79,17 @@
         font-size: 14px;
         color: #aaa;
       }
+
+      /* ✅ New: Image preview styling */
+      .image-preview {
+        width: 150px;
+        height: 150px;
+        border-radius: 12px;
+        object-fit: cover;
+        display: none;
+        margin-top: 10px;
+        border: 2px solid #ccc;
+      }
     </style>
   </head>
 
@@ -156,6 +167,11 @@
               placeholder="اكتب تفاصيل العرض هنا..."
             ></textarea>
 
+            <!-- ✅ New image upload field -->
+            <label>اختيار صورة العرض (اختياري)</label>
+            <input type="file" id="offerImage" accept="image/*" />
+            <img id="imagePreview" class="image-preview" alt="معاينة الصورة" />
+
             <label>تاريخ انتهاء العرض</label>
             <input type="date" id="offerDate" />
 
@@ -224,14 +240,37 @@
         icon.classList.replace("fa-moon", "fa-sun");
       }
 
+      // ✅ Preview selected image
+      const offerImage = document.getElementById("offerImage");
+      const imagePreview = document.getElementById("imagePreview");
+      offerImage.addEventListener("change", () => {
+        const file = offerImage.files[0];
+        if (file) {
+          const reader = new FileReader();
+          reader.onload = (e) => {
+            imagePreview.src = e.target.result;
+            imagePreview.style.display = "block";
+          };
+          reader.readAsDataURL(file);
+        } else {
+          imagePreview.style.display = "none";
+        }
+      });
+
       async function sendOffer() {
         const title = document.getElementById("offerTitle").value.trim();
         const desc = document.getElementById("offerDesc").value.trim();
         const date = document.getElementById("offerDate").value;
+        const file = offerImage.files[0];
 
         if (!title || !desc || !date) {
           alert("⚠️ يرجى تعبئة جميع الحقول قبل الإرسال.");
           return;
+        }
+
+        let base64Image = null;
+        if (file) {
+          base64Image = await toBase64(file);
         }
 
         try {
@@ -244,6 +283,10 @@
             service: title,
             appointment: `${desc}\n⏰ صالح حتى: ${date}`,
           };
+
+          if (base64Image) {
+            payload.image = base64Image;
+          }
 
           const res = await fetch(
             "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
@@ -263,6 +306,15 @@
         } catch (err) {
           alert("❌ خطأ أثناء الإرسال: " + err.message);
         }
+      }
+
+      function toBase64(file) {
+        return new Promise((resolve, reject) => {
+          const reader = new FileReader();
+          reader.readAsDataURL(file);
+          reader.onload = () => resolve(reader.result);
+          reader.onerror = (error) => reject(error);
+        });
       }
     </script>
   </body>
