--- a/offers.html
+++ b/offers.html
@@ -80,11 +80,11 @@
         color: #aaa;
       }
 
-      /* ✅ New: Image preview styling */
+      /* ✅ Preview styling */
       .image-preview {
         width: 150px;
         height: 150px;
-        border-radius: 12px;
+        border-radius: 10px;
         object-fit: cover;
         display: none;
         margin-top: 10px;
@@ -167,7 +167,7 @@
               placeholder="اكتب تفاصيل العرض هنا..."
             ></textarea>
 
-            <!-- ✅ New image upload field -->
+            <!-- ✅ New: Image upload -->
             <label>اختيار صورة العرض (اختياري)</label>
             <input type="file" id="offerImage" accept="image/*" />
             <img id="imagePreview" class="image-preview" alt="معاينة الصورة" />
@@ -257,6 +257,7 @@
         }
       });
 
+      // ✅ Send Offer with image upload
       async function sendOffer() {
         const title = document.getElementById("offerTitle").value.trim();
         const desc = document.getElementById("offerDesc").value.trim();
@@ -268,13 +269,29 @@
           return;
         }
 
-        let base64Image = null;
+        let imageUrl = null;
+
         if (file) {
-          base64Image = await toBase64(file);
+          try {
+            const { data, error } = await supabase.storage
+              .from("offers")
+              .upload(`offers/${Date.now()}_${file.name}`, file, {
+                cacheControl: "3600",
+                upsert: true,
+              });
+            if (error) throw error;
+
+            const { data: urlData } = supabase.storage
+              .from("offers")
+              .getPublicUrl(data.path);
+            imageUrl = urlData.publicUrl;
+          } catch (err) {
+            console.error("❌ Image upload error:", err.message);
+            alert("⚠️ حدث خطأ أثناء رفع الصورة. سيتم الإرسال بدون صورة.");
+          }
         }
 
         try {
-          // 🟢 الرقم الثابت هنا (يمكن تغييره بسهولة)
           const phone = "962785050875";
 
           const payload = {
@@ -284,9 +301,7 @@
             appointment: `${desc}\n⏰ صالح حتى: ${date}`,
           };
 
-          if (base64Image) {
-            payload.image = base64Image;
-          }
+          if (imageUrl) payload.image = imageUrl;
 
           const res = await fetch(
             "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
@@ -306,15 +321,6 @@
         } catch (err) {
           alert("❌ خطأ أثناء الإرسال: " + err.message);
         }
-      }
-
-      function toBase64(file) {
-        return new Promise((resolve, reject) => {
-          const reader = new FileReader();
-          reader.readAsDataURL(file);
-          reader.onload = () => resolve(reader.result);
-          reader.onerror = (error) => reject(error);
-        });
       }
     </script>
   </body>
