--- a/offers.html
+++ b/offers.html
@@ -80,7 +80,6 @@
         color: #aaa;
       }
 
-      /* ✅ Preview styling */
       .image-preview {
         width: 150px;
         height: 150px;
@@ -279,7 +278,7 @@
             const uniqueName = `${Date.now()}_${file.name}`;
             const { data, error } = await supabase.storage
               .from("offers")
-              .upload(uniqueName, file);
+              .upload(uniqueName, file); // ✅ Corrected path (no nested folder)
 
             if (error) throw error;
 
@@ -288,6 +287,7 @@
               .getPublicUrl(uniqueName);
 
             imageUrl = urlData.publicUrl;
+            console.log("✅ Uploaded Image URL:", imageUrl);
           } catch (err) {
             console.error("❌ Image upload error:", err.message);
             alert("⚠️ حدث خطأ أثناء رفع الصورة. سيتم الإرسال بدون صورة.");
@@ -295,15 +295,17 @@
         }
 
         try {
-          const phone = "962785050875"; // ✅ Replace with recipient phone number
+          const phone = "962785050875"; // ✅ WhatsApp number
 
           const payload = {
             name: "Smile Clinic",
             phone: phone,
             service: title,
             appointment: `${desc}\n⏰ صالح حتى: ${date}`,
-            image: imageUrl,
+            image: imageUrl, // ✅ Will include if exists
           };
+
+          console.log("📦 Sending payload:", payload);
 
           const res = await fetch(
             "https://whatsapp-test-rosy.vercel.app/sendWhatsApp",
